{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Bird",
            "id": "09256591-e401-4f6a-b573-1aac3c7ac9fe",
            "actions": [
                {
                    "name": "Flap",
                    "type": "Button",
                    "id": "d7ec68dc-d870-4110-bfa4-ad89b35a496e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe83a6d0-2dbf-4501-9f20-5cf179270623",
                    "path": "<Touchscreen>/press",
                    "interactions": "Press(pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "Flap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b825566-5779-4097-9f91-a00eb78c6651",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "Flap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "911aa497-94ac-44da-9ade-ecdd415e5b86",
            "actions": [
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "88c04bf0-dfe8-465d-b54d-e6791f36110e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwipePrimaryContact",
                    "type": "PassThrough",
                    "id": "34be2c63-b0fd-45a9-bd88-29ebb8fda0de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwipePrimaryPosition",
                    "type": "PassThrough",
                    "id": "309ed252-6d97-4bd1-b0f4-bfae93c32488",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3a083e1-662a-4bc5-b474-d50b447c88b9",
                    "path": "<Touchscreen>/press",
                    "interactions": "Hold(duration=0.01,pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99d8fd53-c0d6-4b11-b465-e3d7df987670",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.01,pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df948ce0-ab6d-4d83-a8c6-5d7389f9795e",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35c59e41-a3f7-46b7-8636-98e08830ced3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(pressPoint=0.01)",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34125edf-6f27-494a-8f33-103dc4a8d3cf",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc910a02-7868-4468-9fda-dfd6469b4dd8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}